fix list page alignment issues

--- a/src/styles/list_page_styles.css
+++ b/src/styles/list_page_styles.css
@@ -7,3 +7,9 @@
 .listHeader {
     margin-top: 50px;
 }
+
+.listPageListItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
